--- a/src/output.css
+++ b/src/output.css
@@ -554,636 +554,72 @@ video {
   display: none;
 }
 
-.relative {
-  position: relative;
-}
-
-.top-\[-54px\] {
-  top: -54px;
-}
-
 .m-auto {
   margin: auto;
-}
-
-.my-\[10px\] {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.my-\[40px\] {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
-.mb-\[10px\] {
-  margin-bottom: 10px;
-}
-
-.mb-\[40px\] {
-  margin-bottom: 40px;
-}
-
-.mb-\[4px\] {
-  margin-bottom: 4px;
-}
-
-.mb-\[50px\] {
-  margin-bottom: 50px;
-}
-
-.mt-\[15px\] {
-  margin-top: 15px;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
-}
-
-.h-\[224px\] {
-  height: 224px;
-}
-
-.h-\[240px\] {
-  height: 240px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.w-\[220px\] {
-  width: 220px;
-}
-
-.w-\[240px\] {
-  width: 240px;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[50px\] {
-  width: 50px;
 }
 
 .max-w-\[1200px\] {
   max-width: 1200px;
 }
 
-.flex-col {
-  flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-7 {
-  gap: 1.75rem;
-}
-
-.gap-\[15px\] {
-  gap: 15px;
-}
-
-.gap-\[16\.5px\] {
-  gap: 16.5px;
-}
-
-.gap-\[16px\] {
-  gap: 16px;
-}
-
-.gap-\[18px\] {
-  gap: 18px;
-}
-
-.gap-\[20px\] {
-  gap: 20px;
-}
-
-.gap-\[22px\] {
-  gap: 22px;
-}
-
-.gap-\[24px\] {
-  gap: 24px;
-}
-
-.gap-\[25px\] {
-  gap: 25px;
-}
-
-.gap-\[29px\] {
-  gap: 29px;
-}
-
-.gap-\[30px\] {
-  gap: 30px;
-}
-
-.gap-\[35px\] {
-  gap: 35px;
-}
-
 .gap-\[40px\] {
   gap: 40px;
 }
 
-.gap-\[50px\] {
-  gap: 50px;
-}
-
-.gap-\[60px\] {
-  gap: 60px;
-}
-
-.gap-\[8px\] {
-  gap: 8px;
-}
-
-.gap-\[\] {
-  gap: ;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
-.rounded-\[30px\] {
-  border-radius: 30px;
-}
-
-.rounded-\[50\%\] {
-  border-radius: 50%;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.border-\[1px\] {
-  border-width: 1px;
-}
-
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-t-\[2px\] {
-  border-top-width: 2px;
-}
-
-.border-\[\#DCDDEB\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(220 221 235 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#EFF0F6\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 240 246 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#bbbcc0\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(187 188 192 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#a9aaaf\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(169 170 175 / var(--tw-border-opacity, 1));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
-.border-t-\[\] {
-  border-top-color: ;
-}
-
-.bg-\[\#0075FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 117 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#211F54\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 31 84 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#EDF5FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 245 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#EFF0F6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 240 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.p-\[10px\] {
-  padding: 10px;
-}
-
-.p-\[18px\] {
-  padding: 18px;
-}
-
-.p-\[20px\] {
-  padding: 20px;
+.gap-\[54px\] {
+  gap: 54px;
 }
 
 .p-\[25px\] {
   padding: 25px;
 }
 
-.p-\[35px\] {
-  padding: 35px;
+.pt-\[\] {
+  padding-top: ;
 }
 
-.p-\[8px\] {
-  padding: 8px;
-}
-
-.px-\[15px\] {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.px-\[24px\] {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-
-.px-\[35px\] {
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.px-\[40px\] {
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
-}
-
-.pt-0 {
-  padding-top: 0px;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-start {
-  text-align: start;
-}
-
-.text-\[15px\] {
-  font-size: 15px;
+.pt-\[40px\] {
+  padding-top: 40px;
 }
 
 .text-\[18px\] {
   font-size: 18px;
 }
 
-.text-\[20px\] {
-  font-size: 20px;
+.text-\[60px\] {
+  font-size: 60px;
 }
 
-.text-\[21px\] {
-  font-size: 21px;
+.font-\[500\] {
+  font-weight: 500;
 }
 
-.text-\[22px\] {
-  font-size: 22px;
-}
-
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-\[25px\] {
-  font-size: 25px;
-}
-
-.text-\[28px\] {
-  font-size: 28px;
-}
-
-.text-\[30px\] {
-  font-size: 30px;
-}
-
-.text-\[35px\] {
-  font-size: 35px;
-}
-
-.text-\[54px\] {
-  font-size: 54px;
-}
-
-.text-\[48px\] {
-  font-size: 48px;
-}
-
-.font-\[700\] {
-  font-weight: 700;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
-.font-normal {
-  font-weight: 400;
-}
-
-.leading-\[18px\] {
-  line-height: 18px;
-}
-
-.leading-\[20px\] {
-  line-height: 20px;
-}
-
-.leading-\[23px\] {
-  line-height: 23px;
-}
-
-.leading-\[30px\] {
-  line-height: 30px;
-}
-
-.leading-\[35px\] {
-  line-height: 35px;
-}
-
-.leading-\[36px\] {
-  line-height: 36px;
-}
-
-.leading-\[65px\] {
-  line-height: 65px;
-}
-
-.tracking-\[1\.6px\] {
-  letter-spacing: 1.6px;
-}
-
-.text-\[\#0075FF\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 117 255 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#211F54\] {
-  --tw-text-opacity: 1;
-  color: rgb(33 31 84 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#6E7191\] {
-  --tw-text-opacity: 1;
-  color: rgb(110 113 145 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-@media (min-width: 768px) {
-  .md\:my-\[200px\] {
-    margin-top: 200px;
-    margin-bottom: 200px;
-  }
-
-  .md\:mb-\[20px\] {
-    margin-bottom: 20px;
-  }
-
-  .md\:mt-\[130px\] {
-    margin-top: 130px;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:w-\[40\%\] {
-    width: 40%;
-  }
-
-  .md\:w-\[45\%\] {
-    width: 45%;
-  }
-
-  .md\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[510px\] {
-    width: 510px;
-  }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:grid-rows-4 {
-    grid-template-rows: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
-  .md\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
-  }
-
-  .md\:gap-\[28px\] {
-    gap: 28px;
-  }
-
-  .md\:gap-0 {
-    gap: 0px;
-  }
-
-  .md\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-  }
-
-  .md\:p-0 {
-    padding: 0px;
-  }
-
-  .md\:p-\[18px\] {
-    padding: 18px;
-  }
-
-  .md\:text-start {
-    text-align: start;
-  }
-
-  .md\:text-\[30px\] {
-    font-size: 30px;
-  }
-
-  .md\:text-\[48px\] {
-    font-size: 48px;
-  }
-
-  .md\:leading-\[30px\] {
-    line-height: 30px;
-  }
-
-  .md\:leading-\[40px\] {
-    line-height: 40px;
-  }
-
-  .md\:leading-\[58px\] {
-    line-height: 58px;
-  }
+.leading-\[24px\] {
+  line-height: 24px;
 }
 
 @media (min-width: 1024px) {
-  .lg\:mt-\[130px\] {
-    margin-top: 130px;
-  }
-
   .lg\:flex {
     display: flex;
   }
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
-  }
-
-  .lg\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .lg\:bg-\[\#211F54\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(33 31 84 / var(--tw-bg-opacity, 1));
-  }
-
-  .lg\:text-start {
-    text-align: start;
-  }
-
-  .lg\:text-\[21px\] {
-    font-size: 21px;
-  }
-
-  .lg\:text-\[48px\] {
-    font-size: 48px;
-  }
-
-  .lg\:text-\[68px\] {
-    font-size: 68px;
-  }
-
-  .lg\:font-\[700\] {
-    font-weight: 700;
-  }
-
-  .lg\:leading-\[58px\] {
-    line-height: 58px;
-  }
-
-  .lg\:leading-\[74px\] {
-    line-height: 74px;
-  }
-
-  .lg\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
 }
