--- a/src/output.css
+++ b/src/output.css
@@ -568,16 +568,6 @@ video {
   margin-bottom: 20px;
 }
 
-.my-\[\] {
-  margin-top: ;
-  margin-bottom: ;
-}
-
-.my-\[70px\] {
-  margin-top: 70px;
-  margin-bottom: 70px;
-}
-
 .flex {
   display: flex;
 }
@@ -586,16 +576,36 @@ video {
   display: none;
 }
 
-.w-\[\] {
-  width: ;
-}
-
 .w-\[60\%\] {
   width: 60%;
 }
 
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
 .max-w-\[1200px\] {
   max-width: 1200px;
+}
+
+.max-w-\[900px\] {
+  max-width: 900px;
 }
 
 .flex-col {
@@ -656,22 +666,8 @@ video {
   background-color: rgb(255 204 204 / var(--tw-bg-opacity, 1));
 }
 
-.p-\[20px\] {
-  padding: 20px;
-}
-
 .p-\[25px\] {
   padding: 25px;
-}
-
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.py-\[15px\] {
-  padding-top: 15px;
-  padding-bottom: 15px;
 }
 
 .px-\[25px\] {
@@ -679,14 +675,29 @@ video {
   padding-right: 25px;
 }
 
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .pt-\[40px\] {
@@ -705,12 +716,12 @@ video {
   font-size: 20px;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
-}
-
 .text-\[30px\] {
   font-size: 30px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .font-\[500\] {
@@ -737,6 +748,11 @@ video {
   line-height: ;
 }
 
+.text-\[\#171717\] {
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#797979\] {
   --tw-text-opacity: 1;
   color: rgb(121 121 121 / var(--tw-text-opacity, 1));
@@ -751,11 +767,6 @@ video {
   color: ;
 }
 
-.text-\[\#171717\] {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity, 1));
-}
-
 @media (min-width: 1024px) {
   .lg\:my-\[70px\] {
     margin-top: 70px;
@@ -766,24 +777,12 @@ video {
     display: flex;
   }
 
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[45\%\] {
-    width: 45%;
-  }
-
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
-  .lg\:w-\[75\%\] {
-    width: 75%;
-  }
-
   .lg\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .lg\:w-\[50\%\] {
+    width: 50%;
   }
 
   .lg\:flex-row {
@@ -802,24 +801,16 @@ video {
     text-align: start;
   }
 
-  .lg\:text-\[100px\] {
-    font-size: 100px;
+  .lg\:text-\[50px\] {
+    font-size: 50px;
   }
 
   .lg\:text-\[80px\] {
     font-size: 80px;
   }
 
-  .lg\:text-\[50px\] {
-    font-size: 50px;
-  }
-
-  .lg\:leading-\[117px\] {
-    line-height: 117px;
-  }
-
-  .lg\:leading-\[7px\] {
-    line-height: 7px;
+  .lg\:leading-\[58px\] {
+    line-height: 58px;
   }
 
   .lg\:leading-\[97px\] {
@@ -828,10 +819,6 @@ video {
 
   .lg\:leading-\[\] {
     line-height: ;
-  }
-
-  .lg\:leading-\[58px\] {
-    line-height: 58px;
   }
 
   .lg\:text-\[\] {
